# JEWEL1k

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLANS.md  README.md
.github/workflows/: ci.yml  release.yml
agent-key/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
agent-key/apps/tray/: Cargo.toml  tauri.conf.json
agent-key/apps/tray/capabilities/: default.json
agent-key/apps/tray/src/: main.rs
agent-key/crates/agent-key-cli/: Cargo.toml
agent-key/crates/agent-key-cli/src/: http.rs  main.rs
agent-key/crates/agent-key-cli/tests/: e2e.rs
agent-key/crates/agent-key-core/: Cargo.toml
agent-key/crates/agent-key-core/src/: approval_queue.rs  led_policy.rs  lib.rs  protocol.rs  risk_policy.rs  types.rs
agent-key/crates/agent-key-core/src/transport/: hid.rs  mock.rs  mod.rs  serial.rs
agent-key/plugins/jewel1k-plugin-agent-key/: Cargo.toml  build.rs  package.json  tsconfig.json
agent-key/plugins/jewel1k-plugin-agent-key/guest-js/: index.ts
agent-key/plugins/jewel1k-plugin-agent-key/permissions/: default.toml  sets.toml
agent-key/plugins/jewel1k-plugin-agent-key/permissions/autogenerated/: reference.md
agent-key/plugins/jewel1k-plugin-agent-key/permissions/autogenerated/commands/: cancel_approval.toml  get_current_state.toml  get_health.toml  request_approval.toml  set_brightness.toml  set_status.toml  simulate_button.toml
agent-key/plugins/jewel1k-plugin-agent-key/permissions/schemas/: schema.json
agent-key/plugins/jewel1k-plugin-agent-key/src/: commands.rs  error.rs  lib.rs  manager.rs  server.rs  tests.rs
docs/: DESIGN.md  FIRMWARE_FLASHING.md  HOOKS.md  HOOKS_SETUP.md  PROTOCOL.md  TAURI_PLUGIN.md  _config.yml  edit-guide.md  how-to-custom.md  index.md  troubleshooting.md
docs/_colors/: 01-fujimurasaki.md  02-benizakuro.md  03-oborogane.md
docs/_concepts/: 01-experience.md  02-challenge.md  03-activate.md
docs/_features/: 01-remap.md  02-usb.md  03-case.md  04-keyring.md  05-open-source.md  06-cherry-mx.md
docs/_layouts/: guide.html  landing.html
docs/_lineup/: 01-starter.md  02-beginner.md  03-challenger.md  04-actkey.md
examples/: AGENTS.md  claude-settings.json  codex-hooks.json
setting/: HowToCustom.md  JEWEL1k.json
src/1key/: 1key.ino  qmkCompatibleKeyboard.json
src/1key/src/userQmkCompatibleKeyboard/: osDetection.c  via.c  via.h
src/agentkey/: agentkey.ino
src/agentkey_hid/: agentkey_hid.ino  keyboardConfig.h
src/agentkey_hid/src/userQmkCompatibleKeyboard/: USBHIDKeyboardMouse.c  USBHIDKeyboardMouse.h  USBconstant.c  USBconstant.h  USBhandler.c  USBhandler.h  osDetection.h  via.c  via.h
