[workspace]
resolver = "2"
members = [
  "crates/agent-key-core",
  "crates/agent-key-cli",
  "plugins/jewel1k-plugin-agent-key",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["fooping-tech"]
repository = "https://github.com/fooping-tech/JEWEL1k"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
