[workspace]
resolver = "2"
members = [
  "crates/agent-key-core",
  "crates/agent-key-cli",
  "plugins/jewel1k-plugin-agent-key",
]
# The tray app is its own workspace: it links wry/WebView2, which must stay
# out of this workspace's test builds (see AGENTS.md), and it pulls the full
# tauri feature set. Build it with `cargo build` inside apps/tray.
exclude = ["apps/tray"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["fooping-tech"]
repository = "https://github.com/fooping-tech/JEWEL1k"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
