[package]
name = "agent-key-core"
description = "Core types, protocol, policies and transports for the JEWEL1k agent-key"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
serial = ["dep:serialport"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serialport = { version = "4", optional = true }
